<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_remind"
        android:icon="@drawable/ic_alarm"
        android:title="@string/pref_title_remind"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:iconTint="?colorOnSurfaceVariant"
        app:showAsAction="never" />
</menu>