<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/scrim_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#80000000" />

    <LinearLayout
        android:id="@+id/search_view_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height"
            android:background="@drawable/bg_search_bar"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?actionBarItemBackground"
                android:importantForAccessibility="no"
                android:padding="16dp"
                app:tint="?colorOnSurfaceVariant" />

            <EditText
                android:id="@+id/input_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:imeOptions="flagNoExtractUi|actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:paddingHorizontal="16dp"
                android:textColor="?colorOnSurface"
                android:textColorHint="?colorOnSurfaceVariant"
                android:textSize="15sp"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/button_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?actionBarItemBackground"
                android:importantForAccessibility="no"
                android:padding="16dp"
                app:tint="?colorOnSurfaceVariant" />

            <ImageButton
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?actionBarItemBackground"
                android:importantForAccessibility="no"
                android:padding="16dp"
                android:visibility="gone"
                app:tint="?colorOnSurfaceVariant" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</merge>