...
    <string name="reminder">Reminder</string>
    <string name="search_hint">Search word</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_rationale">You must allow permission to use this feature</string>
    <string name="ok">OK</string>
    <string name="no_words_yet">No words yet</string>
    <string name="deleted_template">%d deleted</string>
    <string name="undo">Undo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
...
